--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,12 @@ script:
 
   #SONARCLOUD
   - mvn sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=rbn1993 -Dsonar.login=$SONAR
+
+#Deploy https://iwvg-ecosystem.herokuapp.com/api
+deploy:
+  provider: heroku
+  api_key:
+    secure: $HEROKU
+  on:
+    branch: master
+  app: iwvg-ecosystem-robinson-gancha
